--- a/Zapier/hooks/package.json
+++ b/Zapier/hooks/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "6.5.0",
     "@types/express": "^5.0.0",
     "express": "^4.21.2",
     "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "prisma": "6.5.0"
   }
 }
