--- a/zapier/package.json
+++ b/zapier/package.json
@@ -6,8 +6,15 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "db:generate": "turbo run db:generate",
+  "db:push": "turbo run db:push"
   },
+  "workspaces": [
+  "packages/*",
+  "apps/*"
+
+],
   "devDependencies": {
     "prettier": "^3.5.3",
     "turbo": "^2.4.4",
