--- a/zapier/turbo.json
+++ b/zapier/turbo.json
@@ -5,8 +5,9 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**"]
     },
+    
     "lint": {
       "dependsOn": ["^lint"]
     },
@@ -16,6 +17,9 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "db:generate": {
+      "cache": false
     }
   }
 }
