--- a/zapier/apps/hooks/tsconfig.json
+++ b/zapier/apps/hooks/tsconfig.json
@@ -12,7 +12,7 @@
 
     /* Language and Environment */
     "paths": {
-      "database": ["../databases/src"]
+      "database": ["../../packages/databases/src"]
     },
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
