--- a/zapier/apps/processor/package.json
+++ b/zapier/apps/processor/package.json
@@ -2,10 +2,11 @@
   "name": "processor",
   "version": "1.0.0",
   "main": "index.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
      "start": "node dist/index.js",
- "dev": "tsc -b && node dist/index.js"
+"dev": "tsc -b --verbose && node dist/index.js"
 
   },
   "keywords": [],
@@ -13,7 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "database": "*",
+   "zapier-database": "*",
     "typescript": "^5.8.2"
   }
 }
