--- a/zapier/packages/databases/package.json
+++ b/zapier/packages/databases/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zapier/database",
+  "name": "zapier-database",
   "version": "0.0.0",
   "private": true,
   "main": "./dist/index.js",
