--- a/zapier/package.json
+++ b/zapier/package.json
@@ -8,13 +8,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "db:generate": "turbo run db:generate",
-  "db:push": "turbo run db:push"
+    "db:push": "turbo run db:push"
   },
   "workspaces": [
-  "packages/*",
-  "apps/*"
-
-],
+    "packages/*",
+    "apps/*"
+  ],
   "devDependencies": {
     "prettier": "^3.5.3",
     "turbo": "^2.4.4",
@@ -23,5 +22,10 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "kafkajs": "^2.2.4",
+    "processor": "^0.1.9"
   }
 }
