feat(config): add zapier-config package and integrate TOPIC_NAME in processor

--- a/zapier/apps/processor/package.json
+++ b/zapier/apps/processor/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "kafkajs": "^2.2.4",
-    "zapier-database": "workspace:*"
+    "zapier-database": "workspace:*",
+    "zapier-config": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.8.2",
