--- a/zapier/apps/primary-backend/package.json
+++ b/zapier/apps/primary-backend/package.json
@@ -14,12 +14,17 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "nodemon": "^3.1.9",
     "zapier-config": "workspace:*",
     "zapier-database": "workspace:*",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
