feat(primary-backend): implement create and retrieve Zaps functionality with validation

--- a/zapier/packages/databases/package.json
+++ b/zapier/packages/databases/package.json
@@ -13,6 +13,7 @@
     "clean": "rm -rf dist",
 
   "db:generate": "prisma generate",
+  "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push --skip-generate"
   },
   "dependencies": {
