--- a/zapier/package.json
+++ b/zapier/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "db:generate": "turbo run db:generate",
-    "db:push": "turbo run db:push"
+    "db:push": "turbo run db:push",
+    "db:migrate": "turbo run db:migrate"
   },
   "workspaces": [
     "packages/*",
