--- a/zapier/apps/hooks/package.json
+++ b/zapier/apps/hooks/package.json
@@ -2,23 +2,22 @@
   "name": "hooks",
   "version": "1.0.0",
   "main": "index.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-     "dev": "tsc -b && node dist/index.js"
-
+    "dev": "tsc -b && node dist/index.js",
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-      "database": "*",
     "@prisma/client": "6.5.0",
     "@types/express": "^5.0.0",
     "express": "^4.21.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "zapier-database": "workspace:*"
   },
   "devDependencies": {
     "prisma": "6.5.0"
