--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   postgres:
     image: postgres:15
@@ -50,6 +51,13 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+
+  primary-backend:
+    build: ./primary-backend
+    ports:
+      - "3000:3000"
+    environment:
+      DATABASE_URL: "your-db-connection-string"
 
 volumes:
   db_data:
