refactor: update Dockerfiles to use alpine images and improve build process

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15
-    container_name: my_postgres
+    container_name: postgres  # Changed to match service name
     environment:
       - POSTGRES_DB=zapier
       - POSTGRES_USER=myuser
@@ -57,40 +57,44 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: "postgresql://myuser:mypassword@my_postgres:5432/zapier"
+      DATABASE_URL: "postgresql://myuser:mypassword@postgres:5432/zapier"  # Fixed host name
       KAFKA_BROKER: "kafka:9092"
+    depends_on:
+      - postgres
+      - kafka
 
   hooks:
     build: ./hooks
     ports:
       - "3001:3001"
     environment:
-      DATABASE_URL: "postgresql://myuser:mypassword@my_postgres:5432/zapier"
+      DATABASE_URL: "postgresql://myuser:mypassword@postgres:5432/zapier"  # Fixed host name
       KAFKA_BROKER: "kafka:9092"
+    depends_on:
+      - postgres
+      - kafka
 
   processor:
     build: ./processor
     ports:
       - "3002:3002"
     environment:
-      DATABASE_URL: "postgresql://myuser:mypassword@my_postgres:5432/zapier"
+      DATABASE_URL: "postgresql://myuser:mypassword@postgres:5432/zapier"  # Fixed host name
       KAFKA_BROKER: "kafka:9092"
+    depends_on:
+      - postgres
+      - kafka
 
   worker:
     build: ./worker
     ports:
       - "3003:3003"
     environment:
-      DATABASE_URL: "postgresql://myuser:mypassword@my_postgres:5432/zapier"
+      DATABASE_URL: "postgresql://myuser:mypassword@postgres:5432/zapier"  # Fixed host name
       KAFKA_BROKER: "kafka:9092"
-
-  client:
-    build: ./client
-    ports:
-      - "3004:3004"
-    environment:
-      API_BASE_URL: "http://primary-backend:3000"
-      KAFKA_BROKER: "kafka:9092"
+    depends_on:
+      - postgres
+      - kafka
 
 volumes:
   db_data:
